# Realmwright

./: .gitignore  .prettierrc  README.md  electron-main.js  index.html  largest_files.py  package-lock.json  package.json  project_stats.py  tailwind.config.js
engine/: Cargo.toml
engine/crates/rw_core/: Cargo.toml
engine/crates/rw_core/src/: lib.rs
engine/crates/rw_core/src/content/: definitions.rs  mod.rs
engine/crates/rw_core/src/foundation/: mod.rs  primitives.rs
engine/crates/rw_core/src/ruleset/: mod.rs  ruleset.rs
engine/crates/rw_core/src/state/: character.rs  effects.rs  inventory.rs  mod.rs
engine/crates/rw_py/: Cargo.toml
engine/crates/rw_py/src/: lib.rs
src/: App.tsx  index.css  main.tsx
src/components/modal/: AlertModal.tsx  ConfirmationModal.tsx  ManageModal.tsx  ModalManager.tsx
src/constants/: abilityTree.constants.ts  sheetEditor.constants.tsx
src/context/: AbilityTreeEditorContext.tsx  AppProviders.tsx  ModalContext.tsx  SettingsContext.tsx  ViewContext.tsx  WorldContext.tsx
src/context/feature/: AbilityTreeEditorContext.tsx  MapEditorContext.tsx  WorldContext.tsx
src/context/global/: AppProviders.tsx  ModalContext.tsx  SettingsContext.tsx  ViewContext.tsx
src/db/: db.ts  queries.ts  types.ts
src/db/queries/: ability.queries.ts  (+7 more)
src/hooks/: useAbilityTreeCanvasData.ts  useAbilityTreeCanvasEvents.ts  useAbilityTreeData.ts
src/pages/: AbilityTreeEditorPage.tsx  CharacterSheetPage.tsx  SettingsPage.tsx  WorldDashboardPage.tsx  WorldManagerPage.tsx
src/stores/: classSheetEditor.store.ts
src/styles/: main.css
(+220 files in other folders)
